chore: rename cv name

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <p>🌎 Campo Grande, Brazil | 🔗 <a href="https://tulio.org" class="hover:text-green-300">tulio.org</a></p>
                     </div>
                 </div>
-                <a href="/Tulio-CV.pdf" download 
+                <a href="/Download_CV.pdf" download 
                    class="border border-green-500/30 px-4 py-2 hover:bg-green-500/10 transition-colors text-sm md:text-base w-full md:w-auto text-center">
                     [Download_CV.pdf]
                 </a>
