--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Túlio Ribeiro - Senior Back-end Developer with 12+ years experience in .NET modernization and cloud integrations">
-    <meta property="og:image" content="https://tulio.org/preview.png">
+    <meta property="og:image" content="https://tulio.org/preview.jpg">
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self' https://cdn.tailwindcss.com;
                    script-src 'self' https://cdn.tailwindcss.com 'unsafe-inline';
@@ -242,7 +242,7 @@
                 <span>Operational Since 2011</span>
                 <span aria-hidden="true" class="blink">■</span>
             </div>
-            <p>© 2023 Túlio Ribeiro — All systems nominal</p>
+            <p>© 2025 Túlio Ribeiro — All systems nominal</p>
         </div>
     </footer>
 
