feat: improved resume details

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-black text-[#66FF66] font-mono min-h-screen overflow-x-hidden relative">
-    <canvas id="matrix" class="fixed inset-0 -z-10 opacity-10" aria-hidden="true"></canvas>
+    <canvas id="matrix" class="fixed inset-0 -z-10 opacity-20" aria-hidden="true"></canvas>
 
     <main class="max-w-4xl mx-auto px-4 py-6 md:py-8 text-sm">
         <header class="mb-8 md:mb-12 border-b border-green-500/30 pb-4 md:pb-6">
@@ -57,19 +57,13 @@
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
-                                        Created high-speed image processing API handling 2K+ requests per minute
+                                        Created high-speed image processing AWS Lambda handling 2K+ requests per minute
                                     </span>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
                                         Modernized Java monolith to Spring Boot REST APIs using JPA and Hibernate
-                                    </span>
-                                </li>
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    <span class="flex-1 text-balance">
-                                        Mentored 3 junior developers through code reviews and pair programming
                                     </span>
                                 </li>
                                 <li class="flex">
@@ -112,11 +106,17 @@
                                         Enforced HTTPS encryption for all client-server communications
                                     </div>
                                 </li>
+                                <li class="flex">
+                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
+                                    <div class="flex-1">
+                                        Mentored junior developers through code reviews and pair programming
+                                    </div>
+                                </li>
                             </ul>
                         </li>
 
                         <!-- Previous .NET Roles -->
-                        <li class="pl-2 md:pl-4 border-l-2 border-green-500/20">
+                        <li class="mb-4 md:mb-6 pl-2 md:pl-4 border-l-2 border-green-500/20">
                             <div class="flex flex-col md:flex-row md:justify-between mb-2 gap-1">
                                 <h3 class="text-green-300 text-base md:text-inherit">Previous .NET Roles (Various Contracts)</h3>
                                 <span class="text-green-500/50 text-sm md:text-inherit">2013–2019</span>
@@ -149,7 +149,7 @@
                         <ul role="list" class="pl-4 space-y-1">
                             <li class="flex">
                                 <span aria-hidden="true" class="text-green-500/50 mr-2">▹</span>
-                                Legacy modernization (.NET Framework → .NET 8)
+                                Legacy modernization (.NET Framework to .NET 8)
                             </li>
                             <li class="flex">
                                 <span aria-hidden="true" class="text-green-500/50 mr-2">▹</span>
@@ -157,11 +157,11 @@
                             </li>
                             <li class="flex">
                                 <span aria-hidden="true" class="text-green-500/50 mr-2">▹</span>
-                                High-performance database optimization
+                                High-performance databases
                             </li>
                             <li class="flex">
                                 <span aria-hidden="true" class="text-green-500/50 mr-2">▹</span>
-                                Team mentorship & technical leadership
+                                Strong mentorship experience
                             </li>
                         </ul>
                         <p class="pt-2">Fluent in Portuguese (native), professional English (technical collaboration).</p>
@@ -178,7 +178,7 @@
                         </div>
                         <div>
                             <h3 class="text-green-300 mb-1">Databases:</h3>
-                            <p>SQL Server (T-SQL), MongoDB, Query Optimization</p>
+                            <p>SQL Server (T-SQL), MongoDB, query optimization</p>
                         </div>
                         <div>
                             <h3 class="text-green-300 mb-1">Cloud:</h3>
@@ -186,7 +186,7 @@
                         </div>
                         <div>
                             <h3 class="text-green-300 mb-1">Integration:</h3>
-                            <p>Webhooks, ETL workflows, Secure HTTPS systems</p>
+                            <p>Webhooks, ETL workflows, secure HTTPS systems</p>
                         </div>
                     </div>
                 </section>
@@ -234,7 +234,6 @@
         </div>
     </main>
 
-    <!-- Keep existing footer and scripts -->
     <footer class="border-t border-green-500/30 mt-8 md:mt-12">
         <div class="max-w-4xl mx-auto px-4 py-4 text-center text-green-500/50 text-xs md:text-sm">
             <div class="flex items-center justify-center space-x-4 mb-2">
@@ -247,7 +246,7 @@
     </footer>
 
     <script>
-        // Optimized Matrix Animation
+        // Matrix animation script remains unchanged
         const canvas = document.getElementById('matrix');
         const ctx = canvas.getContext('2d');
         let animationId;
@@ -266,7 +265,7 @@
             if (!lastRender) lastRender = timestamp;
             const delta = timestamp - lastRender;
             
-            if (delta > 50) { // Throttle to ~20fps
+            if (delta > 50) {
                 ctx.fillStyle = 'rgba(0, 0, 0, 0.05)';
                 ctx.fillRect(0, 0, canvas.width, canvas.height);
                 ctx.fillStyle = '#66FF66';
