feat: added og tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Túlio Ribeiro - Senior Back-end Developer with 12+ years experience in .NET modernization and cloud integrations">
-    <meta property="og:image" content="https://tulio.org/preview.jpg">
     <meta http-equiv="Content-Security-Policy" 
           content="default-src 'self' https://cdn.tailwindcss.com;
                    script-src 'self' https://cdn.tailwindcss.com 'unsafe-inline';
                    style-src 'self' 'unsafe-inline'">
     <title>tulio@portfolio:~/execute</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://tulio.org">
+    <meta property="og:title" content="Túlio Ribeiro - Senior Back-end Developer">
+    <meta property="og:description" content="12+ years experience in .NET modernization and cloud integrations">
+    <meta property="og:image" content="https://tulio.org/preview.jpg">
+    <meta property="og:image:width" content="1408">
+    <meta property="og:image:height" content="768">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body class="bg-black text-[#66FF66] font-mono min-h-screen overflow-x-hidden relative">
     <canvas id="matrix" class="fixed inset-0 -z-10 opacity-20" aria-hidden="true"></canvas>
