feat: improved cv

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <section>
                     <h2 class="text-lg md:text-xl mb-3 md:mb-4 border-b border-green-500/30 pb-2">$ professional_experience</h2>
                     <ul role="list">
-                        <!-- BairesDev -->
+                        <!-- BairesDev Updated -->
                         <li class="mb-4 md:mb-6 pl-2 md:pl-4 border-l-2 border-green-500/20">
                             <div class="flex flex-col md:flex-row md:justify-between mb-2 gap-1">
                                 <h3 class="text-green-300 text-base md:text-inherit">Software Engineer | BairesDev LLC (Remote)</h3>
@@ -58,31 +58,35 @@
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
-                                        Built AWS Lambda services (C#/.NET 8) for Shopify inventory sync with automatic error retries
-                                    </span>
+                        Engineered AWS Lambda services (C#/.NET 8) synchronizing 100K+ SKUs between LulaRoe and Shopify,
+                        implementing data-diffing logic and intelligent retries to overcome API limitations
+                    </span>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
-                                        Created high-speed image processing AWS Lambda handling 2K+ requests per minute
-                                    </span>
+                        Developed high-performance image processing Lambda (SkiaSharp) generating dynamic collages with
+                        sub-second response times for Wayroo's platform
+                    </span>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
-                                        Modernized Java monolith to Spring Boot REST APIs using JPA and Hibernate
-                                    </span>
+                        Modernized Java monolith to Spring Boot REST APIs with JPA/Hibernate, reducing maintenance
+                        overhead by 40% through standardized data access
+                    </span>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <span class="flex-1 text-balance">
-                                        Designed Azure DevOps pipelines for automated testing and deployments
-                                    </span>
+                        Implemented Azure DevOps CI/CD with YAML pipelines, automating testing and cutting post-deployment
+                        issues by 65%
+                    </span>
                                 </li>
                             </ul>
                         </li>
 
-                        <!-- Geoi2 -->
+                        <!-- Geoi2 Updated -->
                         <li class="mb-4 md:mb-6 pl-2 md:pl-4 border-l-2 border-green-500/20">
                             <div class="flex flex-col md:flex-row md:justify-between mb-2 gap-1">
                                 <h3 class="text-green-300 text-base md:text-inherit">Full Stack Developer | Geoi2 Tecnologia (Remote)</h3>
@@ -92,54 +96,23 @@
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <div class="flex-1">
-                                        Replaced legacy JSF system with Angular 13 micro-frontends and Spring Boot backend
+                                        Transformed legacy JSF system into Angular 13 micro-frontends + Spring Boot backend,
+                                        improving response times by 70% and user satisfaction scores by 35%
                                     </div>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <div class="flex-1">
-                                        Developed Java CLI tool to automate database setup and ETL using Pentaho Kettle
+                                        Created Java CLI tool automating multi-DBMS (SQL Server, Oracle, etc.) setups for government audits,
+                                        reducing deployment time from days to hours
                                     </div>
                                 </li>
                                 <li class="flex">
                                     <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
                                     <div class="flex-1">
-                                        Compressed JSON payloads by 90% with gzip for MongoDB data ingestion
+                                        Optimized MongoDB ingestion using gzip compression, reducing JSON payload size by 90% while
+                                        maintaining data integrity in low-bandwidth environments
                                     </div>
-                                </li>
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    <div class="flex-1">
-                                        Enforced HTTPS encryption for all client-server communications
-                                    </div>
-                                </li>
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    <div class="flex-1">
-                                        Mentored junior developers through code reviews and pair programming
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
-
-                        <!-- Previous .NET Roles -->
-                        <li class="mb-4 md:mb-6 pl-2 md:pl-4 border-l-2 border-green-500/20">
-                            <div class="flex flex-col md:flex-row md:justify-between mb-2 gap-1">
-                                <h3 class="text-green-300 text-base md:text-inherit">Previous .NET Roles (Various Contracts)</h3>
-                                <span class="text-green-500/50 text-sm md:text-inherit">2013–2019</span>
-                            </div>
-                            <ul role="list" class="text-green-500/80 space-y-1 md:space-y-2 text-sm">
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    Delivered government compliance systems using C#/.NET Framework 4.5 and SQL Server
-                                </li>
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    Upgraded legacy ASP.NET applications to WebAPI services
-                                </li>
-                                <li class="flex">
-                                    <span aria-hidden="true" class="text-green-500/50 mr-2">»</span>
-                                    Collaborated with cross-functional teams via Slack and video calls
                                 </li>
                             </ul>
                         </li>
@@ -180,20 +153,20 @@
                     <h2 class="text-lg md:text-xl mb-3 md:mb-4 border-b border-green-500/30 pb-2">$ core_competencies</h2>
                     <div class="grid grid-cols-1 gap-3 text-green-500/80 text-sm">
                         <div>
-                            <h3 class="text-green-300 mb-1">Back-end:</h3>
-                            <p>.NET 8, C#, Java 11, REST APIs, Entity Framework</p>
+                            <h3 class="text-green-300 mb-1">Back-end Architecture:</h3>
+                            <p>.NET 8 • Spring Boot • REST API Design • Microservices</p>
                         </div>
                         <div>
-                            <h3 class="text-green-300 mb-1">Databases:</h3>
-                            <p>SQL Server (T-SQL), MongoDB, query optimization</p>
+                            <h3 class="text-green-300 mb-1">Data Engineering:</h3>
+                            <p>SQL Server T-SQL • MongoDB Aggregation • ETL (Pentaho Kettle)</p>
                         </div>
                         <div>
-                            <h3 class="text-green-300 mb-1">Cloud:</h3>
-                            <p>AWS Lambda, Docker, Azure DevOps CI/CD</p>
+                            <h3 class="text-green-300 mb-1">Cloud Infrastructure:</h3>
+                            <p>AWS Lambda • S3 • Azure DevOps • Docker • CI/CD Pipelines</p>
                         </div>
                         <div>
-                            <h3 class="text-green-300 mb-1">Integration:</h3>
-                            <p>Webhooks, ETL workflows, secure HTTPS systems</p>
+                            <h3 class="text-green-300 mb-1">Performance Optimization:</h3>
+                            <p>Query Tuning • Compression Algorithms • Concurrent Processing</p>
                         </div>
                     </div>
                 </section>
